--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
     const introLines = [
       { text: "本遊戲可能會引起某些人的不適", img: "" },
-      { text: "有不適請立即關閉此遊戲", img: "" },
+      { text: "若有不適請立即關閉此遊戲", img: "" },
       { text: "機智楊老生活：逃離勞改營", img: "photo.png" },
       { text: "機智楊老生活逃離勞改營製作小組出品", img: "" },
       { text: "這是一段不為人知的故事...", img: "" },
