--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
         location: "房門口",
         speaker: "守衛",
         text: "算你識相，這把鑰匙你拿著，晚上安分點。",
-        charImg: "guard.png",
+        charImg: "Gemini_Generated_Image_suylcdsuylcdsuyl.png",
         action: () => { playerState.money -= 50; },
         action: () => { playerState.inventory.push("後門鑰匙"); },
         choices: [{ text: "收起來", next: "story1" }]
