--- a/index.html
+++ b/index.html
@@ -149,6 +149,82 @@
     .hud-label { color: #94a3b8; margin-right: 5px; }
     .hud-value { color: #fbbf24; font-weight: bold; }
     .quest-tag { color: #10b981; }
+
+    /* 背包切換按鈕 */
+    #bag-toggle {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      z-index: 150;
+      padding: 10px 20px;
+      background: #fbbf24;
+      color: #000;
+      border: none;
+      border-radius: 5px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    /* 背包面板主體 */
+    #inventory-panel {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 400px;
+      background: rgba(15, 23, 42, 0.95);
+      border: 2px solid #6366f1;
+      border-radius: 12px;
+      padding: 20px;
+      z-index: 200;
+      display: none; /* 預設隱藏 */
+      color: white;
+      box-shadow: 0 0 50px rgba(0,0,0,0.8);
+    }
+
+    .inv-header {
+      font-size: 1.5rem;
+      border-bottom: 1px solid #475569;
+      padding-bottom: 10px;
+      margin-bottom: 20px;
+      text-align: center;
+      color: #fbbf24;
+    }
+
+    .inv-stats {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 10px;
+      margin-bottom: 20px;
+      background: rgba(255,255,255,0.05);
+      padding: 10px;
+      border-radius: 8px;
+    }
+
+    .item-grid {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 10px;
+    }
+
+    .item-slot {
+      width: 70px;
+      height: 70px;
+      background: rgba(0,0,0,0.3);
+      border: 1px dashed #475569;
+      border-radius: 8px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      font-size: 0.7rem;
+    }
+
+    .item-slot img {
+      width: 40px;
+      height: 40px;
+      object-fit: contain;
+    }
   </style>
 </head>
 <body>
@@ -160,11 +236,24 @@
   </div>
 
   <main class="game-container" id="game-main">
-    <div class="hud-container">
-      <div class="hud-item"><span class="hud-label">信用值:</span><span class="hud-value" id="ui-credit">0</span></div>
-      <div class="hud-item"><span class="hud-label">金錢:</span><span class="hud-value">$<span id="ui-money">0</span></span></div>
-      <div class="hud-item"><span class="hud-label">背包:</span><span id="ui-inventory">空</span></div>
-      <div class="hud-item"><span class="hud-label">當前任務:</span><span class="quest-tag" id="ui-quest">無</span></div>
+    <button id="bag-toggle" onclick="toggleInventory()">🎒 背包 / 狀態</button>
+
+    <div id="inventory-panel">
+      <div class="inv-header">個人終端機</div>
+  
+      <div class="inv-stats">
+        <div><span class="hud-label">信用:</span> <span id="ui-credit" class="hud-value">0</span></div>
+        <div><span class="hud-label">金錢:</span> <span class="hud-value">$<span id="ui-money">0</span></span></div>
+        <div style="grid-column: span 2;">
+          <span class="hud-label">當前任務:</span> <span id="ui-quest" class="quest-tag">無</span>
+        </div>
+      </div>
+
+      <div class="hud-label" style="margin-bottom: 10px;">持有物品:</div>
+      <div class="item-grid" id="item-grid">
+        </div>
+
+      <button onclick="toggleInventory()" style="width:100%; margin-top:20px; padding:8px; background:#475569; border:none; color:white; cursor:pointer; border-radius:4px;">關閉</button>
     </div>
 
     <div class="location-tag" id="location" style="position:absolute; top:20px; right:20px; color:white; background:rgba(0,0,0,0.5); padding:5px 15px; z-index:60;">地區名稱</div>
@@ -398,11 +487,45 @@
       }
     };
 
+    // 定義道具圖鑑
+    const itemDatabase = {
+      "鐵絲": "https://cdn-icons-png.flaticon.com/512/100/100514.png", // 這裡可換成你的圖片檔名
+      "後門鑰匙": "https://cdn-icons-png.flaticon.com/512/3082/3082043.png"
+    };
+
+    function toggleInventory() {
+      const panel = document.getElementById('inventory-panel');
+      panel.style.display = (panel.style.display === 'block') ? 'none' : 'block';
+    }
+
     function updateUI() {
-        document.getElementById('ui-credit').textContent = playerState.credit;
-        document.getElementById('ui-money').textContent = playerState.money;
-        document.getElementById('ui-inventory').textContent = playerState.inventory.join(', ') || "空";
-        document.getElementById('ui-quest').textContent = playerState.quests[playerState.quests.length - 1] || "無";
+      // 更新數值
+      document.getElementById('ui-credit').textContent = playerState.credit;
+      document.getElementById('ui-money').textContent = playerState.money;
+      document.getElementById('ui-quest').textContent = playerState.quests[playerState.quests.length - 1] || "無";
+
+      // 更新道具欄 (含圖片)
+      const grid = document.getElementById('item-grid');
+      grid.innerHTML = ""; // 清空
+
+      // 固定顯示 8 個格子
+      for (let i = 0; i < 8; i++) {
+        const slot = document.createElement('div');
+        slot.className = "item-slot";
+    
+        const itemName = playerState.inventory[i];
+        if (itemName) {
+          const img = document.createElement('img');
+          // 如果圖鑑有這張圖就顯示，沒有就顯示預設
+          img.src = itemDatabase[itemName] || "default_item.png"; 
+          slot.appendChild(img);
+      
+          const nameTag = document.createElement('span');
+          nameTag.textContent = itemName;
+          slot.appendChild(nameTag);
+        }
+        grid.appendChild(slot);
+      }
     }
 
     function renderNode(nodeId) {
