--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     <button id="bag-toggle" onclick="toggleInventory()">🎒 背包 / 狀態</button>
 
     <div id="inventory-panel">
-      <div class="inv-header">個人終端機</div>
+      <div class="inv-header">背包</div>
   
       <div class="inv-stats">
         <div><span class="hud-label">信用:</span> <span id="ui-credit" class="hud-value">0</span></div>
