Add click handler to dialogue bar section

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
     <div class="character-sprite">
       <img id="char-img" src="" alt="角色">
     </div>
-    <section class="dialogue-bar">
+    <section class="dialogue-bar" onclick="handleDialogueClick()">
       <div class="speaker-name" id="speaker">說話者</div>
       <div class="dialogue-text" id="dialogue">內容...</div>
       <div class="choices-container" id="choices"></div>
