--- a/index.html
+++ b/index.html
@@ -282,22 +282,24 @@
 
     // --- 前情提要導航 ---
     function nextIntro() {
-      if (isTyping) {
-        finishTyping(document.getElementById('intro-content'));
-        return;
-      }
-
       const content = document.getElementById('intro-content');
       const introImg = document.getElementById('intro-img');
       const hint = document.querySelector('.click-hint');
 
-      content.style.opacity = 0;
-      introImg.style.opacity = 0;
-      hint.style.opacity = 0;
+      if (isTyping) {
+        finishTyping(content);
+        return;
+      }
 
-      setTimeout(() => {
-        currentIntroIndex++;
-        if (currentIntroIndex < introLines.length) {
+      // 每次點擊增加索引
+      currentIntroIndex++;
+
+      if (currentIntroIndex < introLines.length) {
+        content.style.opacity = 0;
+        introImg.style.opacity = 0;
+        hint.style.opacity = 0;
+
+        setTimeout(() => {
           const data = introLines[currentIntroIndex];
           if (data.img) {
             introImg.src = data.img;
@@ -308,12 +310,12 @@
           }
           content.style.opacity = 1;
           typeWriter(content, data.text);
-        } else {
-          document.getElementById('intro-overlay').style.display = 'none';
-          document.getElementById('game-main').style.display = 'block';
-          renderNode('start');
-        }
-      }, 500);
+        }, 500);
+      } else {
+        document.getElementById('intro-overlay').style.display = 'none';
+        document.getElementById('game-main').style.display = 'block';
+        renderNode('start');
+      }
     }
 
     // --- 遊戲核心邏輯 ---
@@ -323,7 +325,7 @@
         speaker: "張教官",
         text: "我是張教官，我是來告訴你們為什麼會來到這裡。",
         charImg: "chang.png",
-        bg:"ChatGPT Image 2026年2月5日 上午11_55_39.png"
+        bg:"ChatGPT Image 2026年2月5日 上午11_55_39.png",
         action: () => { playerState.quests = ["活下去"]; },
         choices: [{ text: "點擊繼續", next: "next1" }]
       },
@@ -332,7 +334,7 @@
         speaker: "張教官",
         text: "因為你們違背我們偉大的楊主席的命令，所以你們要進來好好反省你們的罪過。",
         charImg: "chang.png",
-        bg:"ChatGPT Image 2026年2月5日 上午11_55_39.png"
+        bg:"ChatGPT Image 2026年2月5日 上午11_55_39.png",
         choices: [{ text: "點擊繼續", next: "next2" }]
       },
       next2: {
@@ -340,7 +342,7 @@
         speaker: "張教官",
         text: "現在來講新疆勞改營宣言，我念一遍，你念一遍。",
         charImg: "chang.png",
-        bg:"ChatGPT Image 2026年2月5日 上午11_55_39.png"
+        bg:"ChatGPT Image 2026年2月5日 上午11_55_39.png",
         choices: [
           { text: "跟著念", next: "speak" },
           { text: "含糊帶過", next: "speaklittle" },
@@ -352,7 +354,7 @@
         speaker: "張教官",
         text: "很好，相信你們都清楚規則了，進去吧，後會有期。",
         charImg: "chang.png",
-        bg:"ChatGPT Image 2026年2月5日 上午11_55_39.png"
+        bg:"ChatGPT Image 2026年2月5日 上午11_55_39.png",
         action: () => { playerState.credit += 1; },
         choices: [
           { text: "進入勞改營", next: "story1" },
@@ -364,7 +366,7 @@
         speaker: "張教官",
         text: "念大聲一點啦，我一個人都比你們大聲！再給你們一次機會。",
         charImg: "chang.png",
-        bg:"ChatGPT Image 2026年2月5日 上午11_55_39.png"
+        bg:"ChatGPT Image 2026年2月5日 上午11_55_39.png",
         action: () => { playerState.credit -= 1; },
         choices: [
           { text: "跟著念", next: "speak" },
@@ -376,7 +378,7 @@
         speaker: "張教官",
         text: "第一天進來就要造反嗎？我再給你最後一次機會！",
         charImg: "chang.png",
-        bg:"ChatGPT Image 2026年2月5日 上午11_55_39.png"
+        bg:"ChatGPT Image 2026年2月5日 上午11_55_39.png",
         action: () => { playerState.credit -= 2; },
         choices: [
           { text: "跟著念", next: "speak" },
@@ -388,7 +390,7 @@
         speaker: "張教官",
         text: "還站在那邊幹什麼？我說什麼就是什麼！帶走！",
         charImg: "chang.png",
-        bg:"ChatGPT Image 2026年2月5日 上午11_55_39.png"
+        bg:"ChatGPT Image 2026年2月5日 上午11_55_39.png",
         action: () => { playerState.credit -= 1; },
         choices: [{ text: "進入勞改營", next: "story1" }]
       },
@@ -397,7 +399,7 @@
         speaker: "旁白",
         text: "你暫時住在這裡了。為了長久之計，你該怎麼做？",
         charImg: "",
-        bg:"ChatGPT Image 2026年2月5日 上午11_55_39.png"
+        bg:"ChatGPT Image 2026年2月5日 上午11_55_39.png",
         choices: [
           { text: "檢查床鋪", next: "check_bed" },
           { text: "賄賂守衛 ($50)", next: "bribe_success", condition: () => playerState.money >= 50 },
@@ -409,7 +411,7 @@
         speaker: "旁白",
         text: "你在床板下發現了一根生鏽的鐵絲。",
         charImg: "",
-        bg:"ChatGPT Image 2026年2月5日 上午11_55_39.png"
+        bg:"ChatGPT Image 2026年2月5日 上午11_55_39.png",
         action: () => { if(!playerState.inventory.includes("鐵絲")) playerState.inventory.push("鐵絲"); },
         choices: [{ text: "收起來", next: "story1" }]
       },
@@ -418,7 +420,7 @@
         speaker: "守衛",
         text: "算你識相，這把鑰匙拿著，晚上安分點。",
         charImg: "guard.png",
-        bg:"ChatGPT Image 2026年2月5日 上午11_55_39.png"
+        bg:"ChatGPT Image 2026年2月5日 上午11_55_39.png",
         action: () => {
           playerState.money -= 50;
           if(!playerState.inventory.includes("後門鑰匙")) playerState.inventory.push("後門鑰匙");
@@ -430,7 +432,7 @@
         speaker: "士兵",
         text: "你被主席認定為無法教化的人。看來你不想活了，讓我助你一臂之力吧。",
         charImg: "soldier.png",
-        bg:"ChatGPT Image 2026年2月5日 上午11_55_39.png"
+        bg:"ChatGPT Image 2026年2月5日 上午11_55_39.png",
         choices: [{ text: "重新開始", next: "reset_game" }]
       }
     };
@@ -464,6 +466,7 @@
         nodeId = 'start';
       }
 
+      playerState.currentNode = nodeId; // 記錄當前位置以供存檔
       const node = nodes[nodeId];
       if (!node) return;
 
@@ -507,6 +510,7 @@
     }
 
     window.onload = () => {
+      // 初始化第一條內容
       typeWriter(document.getElementById('intro-content'), introLines[0].text);
     };
 
@@ -514,7 +518,6 @@
 
     function saveGame() {
       try {
-        // 將當前狀態轉為 JSON 字串存入 localStorage
         const saveData = JSON.stringify(playerState);
         localStorage.setItem('escape_labor_camp_save', saveData);
         alert("進度已儲存！");
@@ -533,11 +536,9 @@
       }
 
       try {
-        // 解析資料並覆蓋當前狀態
         const loadedState = JSON.parse(saveData);
         playerState = loadedState;
     
-        // 關閉背包面板並依照存檔節點重新渲染畫面
         toggleInventory();
         renderNode(playerState.currentNode);
         alert("進度已載入！");
