--- a/index.html
+++ b/index.html
@@ -431,24 +431,24 @@
         location: "棉花田",
         speaker: "馮教官",
         text: "各位，今天是你們第一天工作，我們來看看這個告示板，這會讓你知道你要幹嘛。",
-        charImg: "",
-        bg:"ChatGPT Image 2026年2月5日 上午11_55_39.png",
+        charImg: "Feng.png",
+        bg:"cotton fields.png",
         choices: [{ text: "點擊繼續", next: "next3" }]
       },
       next3: {
         location: "棉花田",
         speaker: "馮教官",
         text: "他說。",
-        charImg: "",
-        bg:"ChatGPT Image 2026年2月5日 上午11_55_39.png",
+        charImg: "Feng.png",
+        bg:"cotton fields.png",
         choices: [{ text: "點擊繼續", next: "next4" }]
       },
       next4: {
         location: "棉花田",
         speaker: "馮教官",
         text: "你們要認真採棉花，這樣就可以賺錢，快去吧。",
-        charImg: "",
-        bg:"ChatGPT Image 2026年2月5日 上午11_55_39.png",
+        charImg: "Feng.png",
+        bg:"cotton fields.png",
         choices: [
           { text: "採很多", next: "many" },
           { text: "偷懶一下，只採一點", next: "little" },
