--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
       next1: {
         location: "勞改營入口",
         speaker: "張教官",
-        text: "因為你們違背我們偉大的楊主席的命令，所以你們要進來好好反省你們的罪過。",
+        text: "因為你們違背我們偉大的楊主席的命令。",
         charImg: "chang.png",
         bg:"ChatGPT Image 2026年2月5日 上午11_55_39.png",
         choices: [{ text: "點擊繼續", next: "next2" }]
