--- a/index.html
+++ b/index.html
@@ -507,6 +507,14 @@
         action: () => { playerState.credit -= 1; },
         choices: [{ text: "回房間", next: "story2" }]
       },
+      story2": {
+        location: "房間",
+        speaker: "旁白",
+        text: "又到了睡覺時間",
+        charImg: "",
+        bg:"ChatGPT Image 2026年2月5日 上午11_55_39.png",
+        choices: [{ text: "回房間", next: "story2" }]
+      }
       game_over_credit: {
         location: "勞改營陰暗的角落",
         speaker: "士兵",
